--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,12 +12,12 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-
+    <!-- jQuery -->
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
-
+    <!-- iamport.payment.js -->
     <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"
@@ -25,12 +25,75 @@
   </head>
 
   <body>
+    <nav
+      class="navbar navbar-dark bg-dark shadow-sm fixed-top navbar-expand-lg"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="/">Shop</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggle"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collpase navbar-collapse" id="navbarToggle">
+          <% if (currentUser && currentUser.admin === 1) { %>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/products">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/categories">Categories</a>
+            </li>
+          </ul>
+          <% } %>
+
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <% if (currentUser) { %>
+            <li class="nav-item">
+              <a
+                class="nav-link d-flex align-items-center"
+                href="/cart/checkout"
+              >
+                Cart
+                <span class="ms-1 badge rounded-pill bg-danger">
+                  <% if (cart) { %> <%= cart.length %> <% } else { %> 0 <% } %>
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <form action="/auth/logout" method="POST">
+                <button
+                  type="submit"
+                  class="nav-link btn btn-link"
+                  style="margin-top: -1px"
+                >
+                  Logout
+                </button>
+              </form>
+            </li>
+            <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">Signup</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Signin</a>
+            </li>
+            <% } %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br /><br /><br />
+
     <div class="container">
-      <% if(error && error.length > 0){ %>
-      <div class="alert alert-danger" role="alert"><%= error %></div>
-      <% } %> <% if(success && success.length > 0) { %>
+      <% if (error && error.length > 0) { %>
+      <div class="alert alert-dange" role="alert"><%= error %></div>
+      <% } %> <% if (success && success.length > 0) { %>
       <div class="alert alert-success" role="alert"><%= success %></div>
       <% } %>
- 
+    </div>
   </body>
 </html>
