--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,10 +18,7 @@
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
     <!-- iamport.payment.js -->
-    <script
-      type="text/javascript"
-      src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"
-    ></script>
+    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
   </head>
 
   <body>
